--- a/CLOCK/index.html
+++ b/CLOCK/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style type="text/css">
+        *{
+            background-color: rgb(167, 167, 233);
+        }
         h1{
             font-size: 100px;
             text-align: center;
