Login Page Project

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>10 Mini JavaScript Projects</h1>
     <h3>1. <a href="CLOCK/index.html">Clock</a></h3>
     <h3>2. <a href="STOP WATCH/index.html">StopWatch</a></h3>
+    <h3>3. <a href="CREDENTIALS LOCKER/index.html">Login Page</a></h3>
 </body>
 </html>
