--- a/CREDENTIALS LOCKER/index.html
+++ b/CREDENTIALS LOCKER/index.html
@@ -3,21 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="main_style.css">
-    <script type="text/javascript" src="main_script.js"></script>
+    <title>Login Page</title>
+    <link rel="stylesheet" href="index_style.css">
+    <script type="text/javascript" src="index_script.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 </head>
 <body>
-    <div class="page">
-        <h1>Sign-In</h1>
-        <p>Email</p>
-        <input type="text" placeholder="johndoe@gmail.com" onkeyup="checkEmail(this)">
-        <div id="mail"></div>
-        <p>Password</p>
-        <input type="text" placeholder="enter Password" onkeyup="checkPassword(this)">
-        <div id="pass"></div>
+   <div class="backgroundIMG">
+    <div class="box">
+        <h1 class="con">Sign-In</h1>
+        <p class="con">Email</p>
+        <input type="email" placeholder="johndoe@gmail.com" id="getemaillogin" class="con">
+        <p id="emaillogin" class="con"></p>
+        <p class="con">Password</p>
+        <input type="password" placeholder="enter Password" onkeyup="verifyPass(this)" class="con" id="getpasslogin">
+        <p class="con" id="passwordlogin"></p>
         <br></br>
-        <a href="signup.html">Don't have a account? Get Registered</a>
+        <a href="signup.html" class="con" id="transfer">Don't have a account? Get Registered!</a>
     </div>
+   </div>
 </body>
 </html>
