--- a/CREDENTIALS LOCKER/signup.html
+++ b/CREDENTIALS LOCKER/signup.html
@@ -3,16 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sign-Up</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+
 </head>
 <body>
     <div>
         <h1>Enter your details to get started!</h1>
 
-        <p>Firstname:</p>
+        <p>First Name:</p>
         <input type="text">
 
-        <p>Lastname:</p>
+        <p>Last Name:</p>
         <input type="text">
 
         <p>Email:</p>
@@ -67,14 +69,17 @@
         if(pass.length>0 && pass.length<6)
         {
             document.getElementById("p1").innerHTML= "password must be of 6-12 digits❗";
+            document.getElementById("p1").style.fontFamily = "Arial, sans-serif";
         }
         else if(pass.length>12)
         {
             document.getElementById("p1").innerHTML= "password must be less than 12 digits❗";
+            document.getElementById("p1").style.fontFamily = "Arial, sans-serif";
         }
         else
         {
             document.getElementById("p1").innerHTML = "";
+            document.getElementById("p1").style.fontFamily = "Arial, sans-serif";
         }
     }
     function ValidatePass(elem)
@@ -83,6 +88,7 @@
         if(passCheck.length>0 && passCheck.length<6)
         {
             document.getElementById("p2").innerHTML= "password must be of 6-12 digits❗";
+            document.getElementById("p2").style.fontFamily = "Arial, sans-serif";
         }
         else if(passCheck.length>=6 && passCheck.length<=12)
         {
@@ -98,6 +104,7 @@
         else if(passCheck.length>12)
         {
             document.getElementById("p2").innerHTML= "password must be less than 12 digits❗";
+            document.getElementById("p2").style.fontFamily = "Arial, sans-serif";
         }
         else
         {
