updated signup and login page

--- a/CREDENTIALS LOCKER/index.html
+++ b/CREDENTIALS LOCKER/index.html
@@ -18,7 +18,9 @@
         <p class="con">Password</p>
         <input type="password" placeholder="enter Password" onkeyup="verifyPass(this)" class="con" id="getpasslogin">
         <p class="con" id="passwordlogin"></p>
-        <br></br>
+        <br>
+        <button class="btn btn-primary" id="loginbtnid" onclick="checkLoginCredentials()">Login</button>
+        <br>
         <a href="signup.html" class="con" id="transfer">Don't have a account? Get Registered!</a>
     </div>
    </div>
