open up new tab

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <h1>10 Mini JavaScript Projects</h1>
-    <h3>1. <a href="CLOCK/index.html">Clock</a></h3>
-    <h3>2. <a href="STOP WATCH/index.html">StopWatch</a></h3>
-    <h3>3. <a href="LOGIN PAGE/index.html">Login Page</a></h3>
+    <h3>1. <a href="CLOCK/index.html" target="_blank">Clock</a></h3>
+    <h3>2. <a href="STOP WATCH/index.html" target="_blank">StopWatch</a></h3>
+    <h3>3. <a href="LOGIN PAGE/index.html" target="_blank">Login Page</a></h3>
 </body>
 </html>
