modifiedL index.html

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
     <h1>10 Mini JavaScript Projects</h1>
-    <h3>1. <a href="CLOCK/index.html" target="_blank">Clock</a></h3>
-    <h3>2. <a href="STOP WATCH/index.html" target="_blank">StopWatch</a></h3>
-    <h3>3. <a href="LOGIN PAGE/index.html" target="_blank">Login Page</a></h3>
-    <h3>4. <a href="#" target="_blank">Fetch leetcode top 50</a></h3>
+    <h3>1. <a href="Clock/index.html" target="_blank">Clock</a></h3>
+    <h3>2. <a href="Stop Watch/index.html" target="_blank">StopWatch</a></h3>
+    <h3>3. <a href="Login page/index.html" target="_blank">Login Page</a></h3>
+    <h3>4. <a href="Leetcode top 50/index.html" target="_blank">Fetch leetcode top 50</a></h3>
 </body>
 </html>
