--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <h3>3. <a href="Login page/index.html" target="_blank">Login Page</a></h3>
     <h3>4. <a href="Leetcode top 50/index.html" target="_blank">Fetch leetcode top 50</a></h3>
     <h3>5. <a href="Form/index.html" target="_blank">Appointment Form</a></h3>
+    <h3>6. <a href="Github Account Search/index.html" target="_blank">Search github Profile</a></h3>
 </body>
 </html>
